plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '7.1.2'
}

group 'me.rin'
version '0.0.1'
sourceCompatibility = 17
compileJava.options.encoding = 'UTF-8'

repositories {
    mavenCentral()
    maven { url 'https://jitpack.io' }
    maven { url 'https://libraries.minecraft.net/' }
    maven { url 'https://repo.codemc.org/repository/nms/' }
}

dependencies {
    compileOnly 'com.mojang:authlib:3.2.28'
    implementation 'org.hibernate:hibernate-core:6.1.3.Final'
    compileOnly 'org.spigotmc:spigot:1.18.2-R0.1-SNAPSHOT'

    implementation 'com.github.hakan-krgn.hCore:bukkit-primary:0.6.6'
    annotationProcessor 'com.github.hakan-krgn.hCore:bukkit:0.6.6'
}

artifacts.archives(tasks.shadowJar)

tasks.jar {
    enabled = true
}

tasks.shadowJar {
    archiveFileName.set(project.name + "-" + project.version + ".jar")
}